src/base/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <complianceGroup>CCPA</complianceGroup>
    <defaultValue>&apos;Prospect&apos;</defaultValue>
    <description>https://jira.coinbase-corp.com/browse/SFDC1-5551</description>
    <inlineHelpText>Prospect indicates the client is in early discussions and has an active opportunity; Onboarded indicates the client has access to at least one product; Disengaged indicates the client is churned or no longer interested.</inlineHelpText>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Onboarded</fullName>
            </value>
            <value>
                <fullName>Offboarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>