src/base/objects/Account/fields/Active_Sales_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Active_Sales_Coverage__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <complianceGroup>CCPA</complianceGroup>
    <description>SFDCCCM-4303</description>
    <inlineHelpText>Denotes whether client meets &quot;Active Sales Coverage&quot; guidance and Sales can be contacted.</inlineHelpText>
    <label>Active Sales Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (override)</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>