src/base/objects/Account/fields/Also_Known_As__c.field-meta.xml
<CustomField>
    <fullName>Also_Known_As__c</fullName>
    <label>Also Known As</label>
    <length>255</length>
    <type>Text</type>
</CustomField>