src/base/objects/Account/fields/Alternate_Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Billing_Email__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <complianceGroup>CCPA</complianceGroup>
    <label>Alternate Billing Email</label>
    <type>Email</type>
</CustomField>