src/base/objects/Account/fields/Annual_User_Count__c.field-meta.xml
<CustomField>
    <fullName>Annual_User_Count__c</fullName>
    <label>Annual User Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>