src/base/objects/Account/fields/Anti_Bribery_Corruption_Policy__c.field-meta.xml
<CustomField>
    <fullName>Anti_Bribery_Corruption_Policy__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <inlineHelpText>As per the STP Anti-Bribery &amp; Corruption policy, please tag Government or Covered Entities/Individuals as relevant.</inlineHelpText>
    <label>Anti-Bribery &amp; Corruption Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Covered Entity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>