src/base/objects/Account/fields/BD_Owner__c.field-meta.xml
<CustomField>
    <fullName>BD_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the BD user who owns this account.</description>
    <label>BD Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsBDOwner</relationshipName>
    <type>Lookup</type>
</CustomField>