src/base/objects/Account/fields/BD_Partner_Category__c.field-meta.xml
<CustomField>
    <fullName>BD_Partner_Category__c</fullName>
    <description>SFCC-859</description>
    <label>BD Partner Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DeFi</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>Dapp</fullName>
            </value>
            <value>
                <fullName>Protocol</fullName>
            </value>
            <value>
                <fullName>Community Partner</fullName>
            </value>
            <value>
                <fullName>DEX</fullName>
            </value>
            <value>
                <fullName>NFT Marketplace</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>