src/base/objects/Account/fields/BD_Partner_Category_Other__c.field-meta.xml
<CustomField>
    <fullName>BD_Partner_Category_Other__c</fullName>
    <description>SFCC-986</description>
    <label>BD Partner Category Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>