src/base/objects/Account/fields/BD_Preferred_Partner__c.field-meta.xml
<CustomField>
    <fullName>BD_Preferred_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFCC-986</description>
    <label>BD Preferred Partner</label>
    <type>Checkbox</type>
</CustomField>