src/base/objects/Account/fields/Below_the_fold__c.field-meta.xml
<CustomField>
    <fullName>Below_the_fold__c</fullName>
    <description>SFCC-859</description>
    <inlineHelpText>Does the Coinbase Wallet option display &quot;below the fold&quot; on the Partner&apos;s Platform?</inlineHelpText>
    <label>Below the fold?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choice_Options</valueSetName>
    </valueSet>
</CustomField>