src/base/objects/Account/fields/Bill_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Name__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <description>https://coinbase.atlassian.net/browse/SSCM1-3286</description>
    <label>Bill To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>