src/base/objects/Account/fields/Billing_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Phone_Number__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <complianceGroup>PII</complianceGroup>
    <description>https://coinbase.atlassian.net/browse/SSCM1-3286</description>
    <label>Billing Phone Number</label>
    <type>Phone</type>
</CustomField>