src/base/objects/Account/fields/Branding__c.field-meta.xml
<CustomField>
    <fullName>Branding__c</fullName>
    <description>SFCC-859</description>
    <inlineHelpText>Does the Partner&apos;s Platform adhere to all of Coinbase&apos;s branding requirements?</inlineHelpText>
    <label>Branding?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choice_Options</valueSetName>
    </valueSet>
</CustomField>