src/base/objects/Account/fields/Chains_Supported__c.field-meta.xml
<CustomField>
    <fullName>Chains_Supported__c</fullName>
    <description>SFCC-859</description>
    <label>Chains Supported</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ETH</fullName>
            </value>
            <value>
                <fullName>SOL</fullName>
            </value>
            <value>
                <fullName>MATIC</fullName>
            </value>
            <value>
                <fullName>Arbitrum</fullName>
            </value>
            <value>
                <fullName>AVAX</fullName>
            </value>
            <value>
                <fullName>BNB</fullName>
            </value>
            <value>
                <fullName>FTM</fullName>
            </value>
            <value>
                <fullName>Gnosis</fullName>
            </value>
            <value>
                <fullName>Optimism</fullName>
            </value>
            <value>
                <fullName>WAX</fullName>
            </value>
            <value>
                <fullName>Harmony</fullName>
            </value>
            <value>
                <fullName>Fuse</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>