src/base/objects/Account/fields/Chains_Supported_Other__c.field-meta.xml
<CustomField>
    <fullName>Chains_Supported_Other__c</fullName>
    <description>SFCC-986</description>
    <label>Chains Supported Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>