src/base/objects/Account/fields/Client_Pod_Segment__c.field-meta.xml
<CustomField>
    <fullName>Client_Pod_Segment__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <inlineHelpText>To help Sales and Account Managers specialize on separate client pods and assign account ownership</inlineHelpText>
    <label>Client Pod Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Client_Pod_Segment</valueSetName>
    </valueSet>
</CustomField>