src/base/objects/Account/fields/Coinbase_Pay_Connection_Date__c.field-meta.xml
<CustomField>
    <fullName>Coinbase_Pay_Connection_Date__c</fullName>
    <label>Coinbase Pay Connection Date</label>
    <type>Date</type>
</CustomField>