src/base/objects/Account/fields/Coinbase_Wallet_Connection_Date__c.field-meta.xml
<CustomField>
    <fullName>Coinbase_Wallet_Connection_Date__c</fullName>
    <description>SFCC-859</description>
    <inlineHelpText>When was Coinbase Wallet added to this Partner&apos;s platform?</inlineHelpText>
    <label>Coinbase Wallet Connection Date</label>
    <type>Date</type>
</CustomField>