src/base/objects/Account/fields/Countries_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Countries_of_Incorporation__c</fullName>
    <label>Countries of Incorporation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries_of_Incorporation</valueSetName>
    </valueSet>
</CustomField>