src/base/objects/Account/fields/Country_Codes__c.field-meta.xml
<CustomField>
    <fullName>Country_Codes__c</fullName>
    <label>Country Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Codes</valueSetName>
    </valueSet>
</CustomField>