src/base/objects/Account/fields/CS_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>CS_Account_Status__c</fullName>
    <description>SFCC-790 - This picklist value displays if an Account is Active, Inactive, Churned or Not Onboarded</description>
    <label>CS Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Not Onboarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>