src/base/objects/Account/fields/CS_Owner__c.field-meta.xml
<CustomField>
    <fullName>CS_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This account&apos;s CS owner</description>
    <inlineHelpText>Engagement Manager</inlineHelpText>
    <label>EM Primary Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>