src/base/objects/Account/fields/Customer_As_Of__c.field-meta.xml
<CustomField>
    <fullName>Customer_As_Of__c</fullName>
    <description>The date this account became a customer.</description>
    <label>Customer As Of</label>
    <type>Date</type>
</CustomField>