src/base/objects/Account/fields/Customer_Summary__c.field-meta.xml
<CustomField>
    <fullName>Customer_Summary__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <label>Customer Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>