src/base/objects/Account/fields/Dapp_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Dapp_Sub_Type__c</fullName>
    <description>SFCC-986</description>
    <label>Dapp Sub-Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>DEFI</fullName>
            </value>
            <value>
                <fullName>DEX</fullName>
            </value>
            <value>
                <fullName>Collectibles</fullName>
            </value>
            <value>
                <fullName>NFT Marketplace</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>