src/base/objects/Account/fields/Dapp_Sub_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Dapp_Sub_Type_Other__c</fullName>
    <description>SFCC-986</description>
    <label>Dapp Sub-Type Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>