src/base/objects/Account/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <description>SFCC-986</description>
    <formula>IF( ISBLANK(Chains_Supported__c) , &quot;Pending&quot;, 
  IF(OR( INCLUDES(Chains_Supported__c, &quot;ETH&quot;), INCLUDES(Chains_Supported__c, &quot;MATIC&quot;)) , &quot;Web, Retail &amp; Wallet&quot;, &quot;Wallet Only&quot;))</formula>
    <inlineHelpText>This field is automatically calculated based on the Chain Supported field.</inlineHelpText>
    <label>Eligibility</label>
    <type>Text</type>
</CustomField>