src/base/objects/Account/fields/EM_Secondary_Owner__c.field-meta.xml
<CustomField>
    <fullName>EM_Secondary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Engagement Manager</inlineHelpText>
    <label>EM Secondary Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>