src/base/objects/Account/fields/Full_ID__c.field-meta.xml
<CustomField>
    <fullName>Full_ID__c</fullName>
    <description>Full Account ID for reports.</description>
    <formula>CASESAFEID(Id)</formula>
    <inlineHelpText>Do not change.</inlineHelpText>
    <label>Full ID</label>
    <type>Text</type>
</CustomField>