src/base/objects/Account/fields/Growth_Potential__c.field-meta.xml
<CustomField>
    <fullName>Growth_Potential__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <description>OPS - 5345: Adding Risk and Growth fields to Accounts</description>
    <label>Growth Potential</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>