src/base/objects/Account/fields/Ideal_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Timezone__c</fullName>
    <label>Ideal Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Timezones</valueSetName>
    </valueSet>
</CustomField>