src/base/objects/Account/fields/Insto_Cross_Sell_Consent__c.field-meta.xml
<CustomField>
    <fullName>Insto_Cross_Sell_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[SCC-1529]: Cross-Sell Consent</description>
    <inlineHelpText>Select this box only if you have gathered consent from the customer that they are willing to receive targeted insto marketing/sales opportunities from a insto sales rep. Please log the consent email to the account</inlineHelpText>
    <label>Insto Cross-Sell Consent</label>
    <type>Checkbox</type>
</CustomField>