src/base/objects/Account/fields/Insto_Support__c.field-meta.xml
<CustomField>
    <fullName>Insto_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insto Support</label>
    <type>Checkbox</type>
</CustomField>