src/base/objects/Account/fields/Insto_TAM_Owner__c.field-meta.xml
<CustomField>
    <fullName>Insto_TAM_Owner__c</fullName>
    <label>Insto TAM Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>