src/base/objects/Account/fields/Is_Coinbase_Pay_Connected__c.field-meta.xml
<CustomField>
    <fullName>Is_Coinbase_Pay_Connected__c</fullName>
    <label>Is Coinbase Pay Connected?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>