src/base/objects/Account/fields/Is_Coinbase_Wallet_connected__c.field-meta.xml
<CustomField>
    <fullName>Is_Coinbase_Wallet_connected__c</fullName>
    <description>SFCC-859</description>
    <label>Is Coinbase Wallet connected?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choice_Options</valueSetName>
    </valueSet>
</CustomField>