src/base/objects/Account/fields/Is_MM_Connected__c.field-meta.xml
<CustomField>
    <fullName>Is_MM_Connected__c</fullName>
    <description>SFCC-859</description>
    <inlineHelpText>Is MetaMask connected on this Partner&apos;s platform?</inlineHelpText>
    <label>Is MM Connected?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choice_Options</valueSetName>
    </valueSet>
</CustomField>