src/base/objects/Account/fields/KYC_Applying_Contact__c.field-meta.xml
<CustomField>
    <fullName>KYC_Applying_Contact__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KYC Applying Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>KYC Accounts</relationshipLabel>
    <relationshipName>KYCAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>