src/base/objects/Account/fields/Lifetime_Booked_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Booked_Revenue__c</fullName>
    <label>Lifetime Booked Revenue</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>