src/base/objects/Account/fields/Macro_Segment__c.field-meta.xml
<CustomField>
    <fullName>Macro_Segment__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <description>Institutional Customer Segmentation https://jira.coinbase-corp.com/browse/SFDC1-5436</description>
    <label>Macro Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Macro_Segment</valueSetName>
    </valueSet>
</CustomField>