src/base/objects/Account/fields/Market_Cap__c.field-meta.xml
<CustomField>
    <fullName>Market_Cap__c</fullName>
    <label>Market Cap</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market_Cap</valueSetName>
    </valueSet>
</CustomField>