src/base/objects/Account/fields/Master_Notes__c.field-meta.xml
<CustomField>
    <fullName>Master_Notes__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <description>Used for linking to a notes document (Google Docs) URL.</description>
    <label>Master Notes</label>
    <type>Url</type>
</CustomField>