src/base/objects/Account/fields/MAU_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>MAU_Last_30_Days__c</fullName>
    <label>MAU Last 30 Days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>