src/base/objects/Account/fields/Netsuite_Id__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Id__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <externalId>true</externalId>
    <label>Netsuite Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>