src/base/objects/Account/fields/Newsletter_Signup__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Signup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFCC-1196 : Newsletter Signup field updates for BD records</description>
    <label>Newsletter Signup</label>
    <type>Checkbox</type>
</CustomField>