src/base/objects/Account/fields/Number_of_Assets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Assets__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>