src/base/objects/Account/fields/Organization_ID__c.field-meta.xml
<CustomField>
    <fullName>Organization_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Organization ID is the Coinbase Cloud ID assigned to each customer. Org ID can be found in the Coinbase Cloud Console.</inlineHelpText>
    <label>Organization ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>