src/base/objects/Account/fields/Pay_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Pay_Competitors__c</fullName>
    <label>Pay Competitors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transak</fullName>
            </value>
            <value>
                <fullName>Ramp</fullName>
            </value>
            <value>
                <fullName>Moonpay</fullName>
            </value>
            <value>
                <fullName>Binance Pay</fullName>
            </value>
            <value>
                <fullName>Wyre</fullName>
            </value>
            <value>
                <fullName>FTX Pay</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>