src/base/objects/Account/fields/Pay_Competitors_Other__c.field-meta.xml
<CustomField>
    <fullName>Pay_Competitors_Other__c</fullName>
    <label>Pay Competitors Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>