src/base/objects/Account/fields/Ranking_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Ranking_Last_30_Days__c</fullName>
    <label>Ranking Last 30 Days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>