src/base/objects/Account/fields/Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Reference_ID__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <label>Reference ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>