src/base/objects/Account/fields/Risk_Status__c.field-meta.xml
<CustomField>
    <fullName>Risk_Status__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <description>OPS-5345: Adding Risk and Growth fields to Accounts</description>
    <label>Risk Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0% (no risk)</fullName>
            </value>
            <value>
                <fullName>25% (low)</fullName>
            </value>
            <value>
                <fullName>50% (medium)</fullName>
            </value>
            <value>
                <fullName>75% (high)</fullName>
            </value>
            <value>
                <fullName>95% (client indicated they are leaving)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>