src/base/objects/Account/fields/Sales_Classification__c.field-meta.xml
<CustomField>
    <fullName>Sales_Classification__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <label>Sales Classification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BlackRock/Aladdin</fullName>
            </value>
            <value>
                <fullName>In-Kind Distribution</fullName>
            </value>
            <value>
                <fullName>Introducing Brokers</fullName>
            </value>
            <value>
                <fullName>OEMS</fullName>
            </value>
            <value>
                <fullName>Private Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>