src/base/objects/Account/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <description>Institutional Customer Segmentation https://jira.coinbase-corp.com/browse/SFDC1-5436</description>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Macro_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Segment</valueSetName>
    </valueSet>
</CustomField>